# higher-order-unification

./: hie.yaml  higher-order-unification.cabal  stack.yaml
src/: Client.hs  Common.hs  Main.hs  Unification.hs
